k8s/openwebui/service-owui.yml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: openwebui
  annotations:
    cloud.google.com/backend-config: '{"default": "openwebui-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: openwebui
