k8s/openwebui/ingress-owui.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui
  namespace: openwebui
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "openwebui-ip"
    networking.gke.io/managed-certificates: "openwebui-cert"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: openwebui.pool-side.cc
      http:
        paths:
          - path: /
            #pathType: ImplementationSpecific
            pathType: Prefix
            backend:
              service:
                name: openwebui
                port:
                  number: 8080  # Changed from 80 to 8080 to match the service
